--- a/Resources/Xib/AddToCollection/AddToCollectionView.xib
+++ b/Resources/Xib/AddToCollection/AddToCollectionView.xib
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddToPlaylistViewController" customModule="VLC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddToCollectionViewController" customModule="VLC" customModuleProvider="target">
             <connections>
-                <outlet property="newPlaylistButton" destination="A6v-5Z-MTf" id="la1-o2-CNd"/>
-                <outlet property="playlistCollectionView" destination="Ozj-oC-7Dg" id="h4b-YS-wRi"/>
+                <outlet property="collectionView" destination="Ozj-oC-7Dg" id="mSP-HL-GFb"/>
+                <outlet property="newCollectionButton" destination="A6v-5Z-MTf" id="g02-SF-rdE"/>
                 <outlet property="view" destination="GSO-Mh-jPo" id="RMB-UZ-7lQ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="AddToPlaylistView" id="GSO-Mh-jPo" userLabel="AddToPlaylistView">
+        <view contentMode="scaleToFill" restorationIdentifier="AddToPlaylistView" id="GSO-Mh-jPo" userLabel="AddToCollectionView">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -45,7 +43,7 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
-                        <action selector="handleNewPlaylist:" destination="-1" eventType="touchUpInside" id="Yss-xO-E0U"/>
+                        <action selector="handleNewCollection:" destination="-1" eventType="touchUpInside" id="jUw-JJ-D4r"/>
                     </connections>
                 </button>
             </subviews>
